Refactored hierarchy